display docker images after jobs

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -33,3 +33,8 @@ jobs:
         run: |
           mkdir -p /tmp/.docker-cache
           docker save mysql:latest | gzip > /tmp/.docker-cache/mysql-latest.tar.gz
+
+      - name: Display docker images.
+        if: steps.cache-docker-layers.outputs.cache-hit != 'true'
+        run:
+          docker image ls
